--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ In 2020, wind supplied almost 1600 TWh of electricity, which was over 5% of worl
 					<header class="major">
 						<h2>Created By: Ahmed Waleed</h2>
 					</header>
-					<h3>Participants in the Science Fair Project: Abdulrahman Ziad, Mohamed Wael, Fatma Ahmed, Mohamed Wassfy</h3>
+					<h3>Participants in the Science Fair Project: Ahmed Waleed, Abdulrahman Ziad, Mohamed Wael, Fatma Ahmed, Mohamed Wassfy</h3>
 
 				</div>
 			</section>
