--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ It's a clean fuel source. ...
 Wind is a domestic source of energy. ...
 It's sustainable. ...
 Wind turbines can be built on existing farms or ranches.</p>
+<br>
+<h3>Here is a video to help you understand more</h3>
+<link rel="stylesheet" href="https://youtu.be/xy9nj94xvKA">
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -91,7 +94,9 @@ In 2020, wind supplied almost 1600 TWh of electricity, which was over 5% of worl
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<h3>Solar Pannels and Light Energy</h3>
 							<p>Solar panels work on your home by converting photons from the sunlight into direct current, which then flows into your inverter. Afterward, your inverter translates the direct current into alternating current and sends the AC to your electric box to power your home.</p>
-
+							<br>
+<h3>Here is a video to help you understand more</h3>
+<link rel="stylesheet" href="https://youtu.be/inPtRWtvDaM">
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
