--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ It's sustainable. ...
 Wind turbines can be built on existing farms or ranches.</p>
 <br>
 <h3>Here is a video to help you understand more</h3>
-<link rel="stylesheet" href="https://youtu.be/xy9nj94xvKA">
+<a href="https://youtu.be/inPtRWtvDaM"></a>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
