--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Wind is a domestic source of energy. ...
 It's sustainable. ...
 Wind turbines can be built on existing farms or ranches.</p>
 <br>
-<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=xy9nj94xvKA&t=157s"></a></h3>
+<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=xy9nj94xvKA&t=157s">Explanation Video</a></h3>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -94,14 +94,14 @@ In 2020, wind supplied almost 1600 TWh of electricity, which was over 5% of worl
 							<h3>Solar Pannels and Light Energy</h3>
 							<p>Solar panels work on your home by converting photons from the sunlight into direct current, which then flows into your inverter. Afterward, your inverter translates the direct current into alternating current and sends the AC to your electric box to power your home.</p>
 							<br>
-<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=inPtRWtvDaM&t=232s"></a></h3>
+<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=inPtRWtvDaM&t=232s">Explanation Video</a></h3>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Fossil Fuels vs Light Energy</h3>
 							<p>We understand today that humanity’s use of fossil fuels is severely damaging our environment. Fossil fuels cause local pollution where they are produced and used, and their ongoing use is causing lasting harm to the climate of our entire planet. Nonetheless, meaningfully changing our ways has been very difficult. Solar energy is a renewable form of energy. Meaning, so long as the sun exists, we will not run out of sunlight to power our homes, cars, and other possessions. Fossil fuels, on the other hand, are nonrenewable resources. Once we have used up the Earth's fossil fuel stores, that's all we have. </p>
 							<br>
-<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=zaXBVYr9Ij0"></a></h3>
+<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=zaXBVYr9Ij0">Explanation Video</a></h3>
 
 						</div>
 						<div class="col-4 col-12-medium">
@@ -109,7 +109,7 @@ In 2020, wind supplied almost 1600 TWh of electricity, which was over 5% of worl
 							<h3>Is Natural Gas clean</h3>
 							<p>Natural gas is often labeled as “clean power” because it burns cleaner than coal. Folks may even believe that natural gas is a sustainable resource. Don’t be fooled. natural gas is a fossil fuel that emits CO2 when burned. In the case of biomass, things also get a bit more complicated. Burning wood—the most common method of biomass energy</p>
 							<br>
-<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=-njmj0diWu8"></a></h3>
+<h3>Here is a video to help you understand more <a href="https://www.youtube.com/watch?v=-njmj0diWu8">Explanation Video</a></h3>
 
 						</div>
 					</div>
