--- a/index.html
+++ b/index.html
@@ -63,19 +63,23 @@ Wind turbines can be built on existing farms or ranches.</p>
 								<h2>Fossil fuels vs Wind Energy</h2>
 							</header>
 							<p>Fossil fuel
-The main fossil fuels are coal, petroleum and natural gas, which can be found by digging and drilling 
-It cause greenhouse effect
-may cause breathing problems
-isnt renewable (actually it is but it take alot of year to form because it forms from dead plants and animals from dinosaurs age)
-Cumulatively, fossil fuels still accounted for 84% of the world's primary energy consumption in 2019.
+The main fossil fuels are coal, petroleum and natural gas, which can be found by digging and drilling 
+It causes greenhouse effect and 
+may cause breathing problems,It
+isn't renewable (actually it is but it take alot of year to form because it forms from dead plants and animals from dinosaurs age)
+Cumulatively, fossil fuels are still accounted for 84% of the world's primary energy consumption in 2019.
 Nearly 15 billion metric tons of fossil fuels are consumed every year
-Its the most used energy in the word
-costs alot to obtain</p>
-<p>Wind energy is Clean energy
-harms less then fuels
+It is the most used energy in the world and
+costs alot to obtain.
+
+
+
+Wind energy is
+Clean energy 
+harms less then fuels, It
 Is renewable
-Dosnt cost alot of obtain 
-Wind power is a popular, sustainable
+Doesn't cost alot to obtain 
+Wind power is popular and sustainable.
 In 2020, wind supplied almost 1600 TWh of electricity, which was over 5% of worldwide electrical generation and about 2% of energy consumption With over 100 GW added during 2020</p>
 
 						</div>
